--- a/workshop1.html
+++ b/workshop1.html
@@ -21,15 +21,15 @@
     <main>
      <div style="width: 480px;margin: auto auto;" class="video1">
 		<h2 style="width: 480px;margin: auto auto; padding-top: 20px">1)Воркшоп по пользовательским историям</h2>
-		<video src=".\Часть 1 из 8 (2023)\[SW.BAND] Воркшопы\[SW.BAND] Воркшоп по пользовательским историям.mp4" width="480" height="270" poster="poster.gif" controls></video>
+		<video src=".\[SW.BAND] Воркшоп по пользовательским историям.mp4" width="480" height="270" poster="poster.gif" controls></video>
 	 </div>
 	 <div style="width: 480px;margin: auto auto;" class="video2">
 		<h2 style="width: 480px;margin: auto auto; padding-top: 20px">2)Воркшоп по моделированию процессов</h2>
-		<video src=".\Часть 1 из 8 (2023)\[SW.BAND] Воркшопы\[SW.BAND] Воркшоп по моделированию процессов.mp4" width="480" height="270" poster="poster.gif" controls></video>
+		<video src=".\[SW.BAND] Воркшоп по моделированию процессов.mp4" width="480" height="270" poster="poster.gif" controls></video>
 	 </div>
 	 <div style="width: 480px;margin: auto auto;" class="video3">
 		<h2 style="width: 120px;margin: auto auto; padding-top: 20px">3)Онбординг</h2>
-		<video src=".\Часть 1 из 8 (2023)\[SW.BAND] Воркшопы\[SW.BAND] Онбординг.mp4" width="480" height="270" poster="poster.gif" controls></video>
+		<video src=".\[SW.BAND] Онбординг.mp4" width="480" height="270" poster="poster.gif" controls></video>
 	 </div>
     </main>
     <footer>
