--- a/Main.html
+++ b/Main.html
@@ -13,7 +13,7 @@
   </head>
   <body style="margin: auto auto; width: 750px; font-size: 25px; font-family: Arial, Helvetica, sans-serif;background: url(8.avif); background-attachment: fixed; background-repeat: no-repeat;background-size: cover">
     <header>
-      <h1 style="text-align: center">Курс Бизнес-аналитика</h1>
+      <h1 style="text-align: center">Курс Бизнес-аналитикаа</h1>
       <nav>
         <ul style="text-align: center; list-style-type:  none">
           <li style="padding-top: 20px"><a style="text-decoration:none; color: black" href="part1.html">Часть 1/8</a></li>
